fix(Header): make component overlap other elements

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,9 +1,13 @@
 .header {
   position: sticky;
   top: 0;
+  z-index: 100;
 
+  background-color: var(--gray-9);
+}
+
+.headerContainer {
   min-height: 8rem;
   display: flex;
   align-items: center;
-  background-color: var(--gray-9);
 }
